2009-05-04  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch adds polyfeat, the polyhedral feature extractor, in the
	set of required modules.

	* driver/pocc/Makefile.am,
	* driver/src/Makefile.am,
	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg,
	* config/stable/driver.cfg,
	* config/irregular/configure.cfg,
	* config/irregular/driver.cfg: Add systematic compilation and
	support of polyfeat.

2009-05-03  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/driver-letsee.c,
	* driver/pocc/options.c,
	* driver/src/options.h,
	* driver/src/options.c,
	* doc/pocc.texi: Provide option --letsee-bounds, and update
	documentation accordingly.

2009-05-03  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* driver/pocc-utils/include/pocc-utils/options.h,
	* driver/pocc-utils/options.c,
	* driver/pocc/include/pocc/driver-letsee.h,
	* driver/pocc/driver-letsee.c,
	* driver/pocc/driver-codegen.c: Enable schedule mode for LetSee.

2009-05-03  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch mainly enables the support of ScopLib

	* driver/pocc/include/pocc/driver-candl.h,
	* driver/pocc/include/pocc/driver-letsee.h,
	* driver/pocc/include/pocc/driver-cloog.h,
	* driver/pocc/include/pocc/driver-pluto.h,
	* driver/pocc/include/pocc/driver-codegen.h,
	* driver/pocc/include/pocc/driver-clan.h,
	* driver/pocc/driver-clan.c,
	* driver/pocc/Makefile.am,
	* driver/pocc/driver-candl.c,
	* driver/pocc/driver-letsee.c,
	* driver/pocc/driver-cloog.c,
	* driver/pocc/driver-pluto.c,
	* driver/pocc/driver-codegen.c,
	* driver/src/pocc.c,
	* driver/src/Makefile.am,
	* driver/src/options.c: Severe update to support the migration
	from Clan to ScopLib.

	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg,
	* config/irregular/configure.cfg,